--- a/.github/workflows/RSS.yml
+++ b/.github/workflows/RSS.yml
@@ -1,8 +1,10 @@
 name: What's new with BoSK RSS
   
-on:
-  schedule:
-    - cron:  '0 0,8,16 * * *'
+#on:
+#  schedule:
+#    - cron:  '0 0,8,16 * * *'
+
+on: [push]
 
 jobs:
   build:
