--- a/.github/workflows/RSS.yml
+++ b/.github/workflows/RSS.yml
@@ -2,7 +2,8 @@ name: What's new with BoSK RSS
   
 on:
   schedule:
-    - cron:  '0 0,8,16 * * *'
+    #- cron:  '0 0,8,16 * * *'
+    - cron:   '30 0,8,17 * * *'
 
 jobs:
   build:
