--- a/.github/workflows/RSS.yml
+++ b/.github/workflows/RSS.yml
@@ -1,9 +1,10 @@
 name: What's new with BoSK RSS
   
 on:
-  schedule:
-    #- cron:  '0 0,8,16 * * *'
-    - cron:   '28 0,8,17 * * *'
+  push:
+    
+#  schedule:
+#    - cron:  '0 0,8,16 * * *'
 
 jobs:
   build:
