--- a/.github/workflows/RSS.yml
+++ b/.github/workflows/RSS.yml
@@ -1,10 +1,10 @@
 name: What's new with BoSK RSS
   
-on:
-  push:
-    
-#  schedule:
-#    - cron:  '0 0,8,16 * * *'
+#on:
+#  push:
+  
+  schedule:
+    - cron:  '0 0,8,16 * * *'
 
 jobs:
   build:
