--- a/.github/workflows/RSS.yml
+++ b/.github/workflows/RSS.yml
@@ -21,7 +21,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install feedparser requests github3.py os
+        pip install feedparser requests github3.py
 
     - name: Assemble RSS of new items
       run: python3 ./BoSK-Scraper.py
